--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.profiles.active=test
-
 spring.jpa.open-in-view=true
+#spring.data.mongodb.uri=mongodb://root:example@localhost:27017/?authMechanism=DEFAULT
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=root
+spring.data.mongodb.password=example
+spring.data.mongodb.database=workshop
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
